--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header {
 }
 
 h1 {
+  font-family: fantasy;
   margin: 0;
   font-size: 32px;
   font-weight: bold;
@@ -40,7 +41,7 @@ h1 {
   padding: 8px 16px;
   font-size: 16px;
   background-color: #fff;
-  color: #007bff;
+  color: black;
   border: none;
   cursor: pointer;
 }
@@ -55,6 +56,7 @@ main {
 }
 
 .weather-result {
+  font-family: Georgia, 'Times New Roman', Times, serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -102,6 +104,7 @@ footer {
 
 .footer-columns {
   display: flex;
+  text-align: center;
 }
 
 .footer-column {
