--- a/style.css
+++ b/style.css
@@ -123,3 +123,39 @@ footer {
 .footer-column li {
   margin-bottom: 5px;
 }
+
+@media (max-width: 320px) {
+  header {
+    padding: 10px;
+  }
+
+  h1 {
+    font-size: 24px;
+  }
+
+  .search-bar {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  #search-input {
+    margin-bottom: 10px;
+  }
+
+  #search-button {
+    width: 100%;
+  }
+
+  main {
+    padding: 10px;
+  }
+
+  .weather-result {
+    width: 100%;
+    margin: 5px 0;
+  }
+
+  footer {
+    padding: 10px;
+  }
+}
