--- a/style.css
+++ b/style.css
@@ -26,6 +26,16 @@ h1 {
   text-transform: uppercase;
 }
 
+.centered-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  text-align: center;
+}
+
+
 .search-bar {
   display: flex;
   justify-content: center;
